add POST,PATCH,DELETE